--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,9 +8,7 @@
   </a>
   <h2><a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
-    <p>Data scientist, technical editor and writer.</p>
-    <p>Political scientist by training, with background in computer science and regional studies.</p>
-  </div>
+    <p>Data scientist, political scientist, collector of jokes about communism.</p>  </div>
   <div id="social">
     {% include social.html %}
   </div>
