--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,9 @@
   </a>
   <h2><a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
-    <p>Data scientist, political scientist, collector of jokes about communism.</p>  </div>
+    <ol><li>Data scientist
+    <li>Political scientist
+    <li>Collector of jokes about communism.</ol>  </div>
   <div id="social">
     {% include social.html %}
   </div>
