--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -10,7 +10,7 @@
   <div id="bio">
     <ol><li>Data scientist
     <li>Political scientist
-    <li>Collector of jokes about communism.</ol>  </div>
+    <li>Collector of jokes about communism</ol>  </div>
   <div id="social">
     {% include social.html %}
   </div>
